Replace ModelSummarizer with torchinfo and profiler

--- a/cnn_lstm_hparam_clean.ipynb
+++ b/cnn_lstm_hparam_clean.ipynb
@@ -85,7 +85,7 @@
     "        split_by_date,\n",
     "    )\n",
     "    from src.models.cnn_lstm import CNNLSTMConfig, CNNLSTMModel, create_model\n",
-    "    from src.optimization.model_summary import detect_gpus, optimal_gpu_config\n",
+    "    from src.optimization.model_utils import detect_gpus, optimal_gpu_config\n",
     "    from src.utils.cluster import get_available_devices, init_ray\n",
     "\n",
     "    print(\"✅ Project modules imported successfully\")\n",
